Remove BCryptPasswordEncoder class, refactor JwtAuthFilter to improve token validation, enhance SecurityConfig with JWT filter integration, and update AuthController to handle access and refresh tokens with cookies. Additionally, implement user retrieval in UserController and streamline UserService for better user management.