@@ -10,41 +10,40 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 @RequiredArgsConstructor
 public class JwtAuthFilter extends OncePerRequestFilter {
+
     private final UserAuthProvider userAuthProvider;
-    
-    private final List<String> publicPaths = Arrays.asList("/api/login", "/api/register");
+
+    private final List<String> publicPaths = List.of("/api/login", "/api/register");
 
     @Override
     protected void doFilterInternal(
             HttpServletRequest request,
             HttpServletResponse response,
             FilterChain filterChain) throws ServletException, IOException {
-        
-        String path = request.getRequestURI();
 
+        String path = request.getRequestURI();
 
         if (publicPaths.contains(path)) {
             filterChain.doFilter(request, response);
             return;
         }
-        
+
         String header = request.getHeader(HttpHeaders.AUTHORIZATION);
-        if (header != null) {
-            String[] elements = header.split(" ");
-            if (elements.length == 2 && elements[0].equals("Bearer")) {
-                try {
-                    SecurityContextHolder.getContext().setAuthentication(
-                            userAuthProvider.validateToken(elements[1])
-                    );
-                } catch (RuntimeException e) {
-                    SecurityContextHolder.clearContext();
-                    throw e;
-                }
+        if (header != null && header.startsWith("Bearer ")) {
+            String token = header.substring("Bearer ".length());
+            try {
+                SecurityContextHolder.getContext().setAuthentication(
+                        userAuthProvider.validateToken(token)
+                );
+            } catch (Exception e) {
+                SecurityContextHolder.clearContext();
+                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                response.getWriter().write("Invalid or expired JWT token");
+                return;
             }
         }
 
